--- a/css/overrides.css
+++ b/css/overrides.css
@@ -98,38 +98,15 @@
 
 /* Hero background images: desktop vs mobile */
 .hero{
-    background-image: url("images/Deskbluewhite.png") !important;
-    background-size: cover !important;
-    background-position: center center !important;
-    background-repeat: no-repeat !important;
+  background-image: url("images/Deskblueyellow.png") !important;
+  background-size: cover !important;
+  background-position: center center !important;
+  background-repeat: no-repeat !important;
 }
 
 @media (max-width:600px){
   .hero{
-      background-image: url("images/phonebluewhite.png") !important;
-  }
-}
-
-/* Human-platform: use white hero-like backgrounds and dark text for readability */
-.human-platform{
-  background-image: url("images/deskbluewhite.png") !important;
-  background-size: cover !important;
-  background-position: center center !important;
-  background-repeat: no-repeat !important;
-  color: #0b1220 !important;
-}
-.human-platform .section-title,
-.human-platform .hp-list li{
-  color: #0b1220 !important;
-}
-.human-platform .hp-list li:before{
-  background: #d4af37 !important;
-}
-.human-platform .hp-logo img{opacity:1 !important}
-
-@media (max-width:600px){
-  .human-platform{
-    background-image: url("images/phonebluewhite.png") !important;
+    background-image: url("images/phoneblueyellow.png") !important;
   }
 }
 
